css/temp.css
/*
*
* this css will be integrated into master. for now testing.......
*
*/
.toc-nav
{
  padding-bottom: 50px !important;
}

.alert-info {
    border: 0;
    border-radius: 0;
    color: #31708f;
    background-color: #3F51B5!important;
    border-color: #bce8f1;
    text-align: center;
    color: #fff;
    margin-bottom: 0;
}

.alert-info ul {
  list-style-type: none;
}

.close {
    float: right;
    font-size: 21px;
    font-weight: 700;
    line-height: 1;
    color: #fffdfd;
    text-shadow: 0 1px 0 #fff;
    filter: alpha(opacity=20);
    opacity: .2;
    margin: 10px 15px 0 0;
}
/*
*
* toc  **********************************************************
*
*/
div#side-toc-title {
    font-weight: bold;
    margin: 0 0 10px 13px;
}
.offcanvas a:focus, .toc-nav a:hover {
    color: opacity: .8;
}
/*
*
*   MOBILE VIEWS
*
*/

/*
*
* override google results.....
*
*/

a.gs-title {
    color: #2089C4!important;
    text-decoration: none;
}

.gs-webResult div.gs-visibleUrl, .gs-imageResult div.gs-visibleUrl {
    color: #82949E!important;
}

.gs-webResult .gs-snippet, .gs-imageResult .gs-snippet, .gs-fileFormatType {
    font-size: 14px!important;
}

img.with-border {
  border: 1px solid #eaeaea;
}

.cse input.gsc-search-button:focus,
input.gsc-search-button:focus {
  box-shadow:inset 0 0 0 1px rgba(255,255,255,0.5);
  -webkit-box-shadow:inset 0 0 0 1px rgba(255,255,255,0.5);
  -moz-box-shadow:inset 0 0 0 1px rgba(255,255,255,0.5);
}

.cse .gsc-search-button input.gsc-search-button-v2,
input.gsc-search-button-v2 {
  width: 13px;
  height: 13px;
  padding: 6px 27px;
  min-width: 13px;
  margin-top: 2px;
}

